<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="meditationRowModel" type="com.evinanshsapplication.app.modules.meditation.data.model.MeditationRowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameCard"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="@style/groupStylewhite_2">
        <ImageView android:id="@+id/imageThumbnail"
            android:layout_gravity="start"
            android:layout_height="@dimen/_179pxh"
            android:layout_width="@dimen/_319pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_10pxh}"
            imageRes="@{@drawable/img_thumbnail_179x319}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_thumbnail_179x319"/>
        <LinearLayout android:id="@+id/linearDescription"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:gravity="start"
                android:id="@+id/txtTitleTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:text="@{meditationRowModel.txtTitleTwo}"
                style="@style/txtManropebold20" tools:text="@string/msg_reduce_your_str"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearDetail"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_19pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearBadge"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.56"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_1">
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtBADGE"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{meditationRowModel.txtBADGE}"
                        style="@style/txtManropebold12" tools:text="@string/lbl_meditation2"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageFirrclock"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_firrclock"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_firrclock"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDuration"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.1"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{meditationRowModel.txtDuration}"
                    style="@style/txtManropebold12" tools:text="@string/lbl_15"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMins"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.22"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{meditationRowModel.txtMins}"
                    style="@style/txtManropebold12" tools:text="@string/lbl_mins2"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
