<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profilVM" type="com.evinanshsapplication.app.modules.profil.data.viewmodel.ProfilVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearProfil"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackaccount"
            android:layout_height="@dimen/_118pxv" android:layout_width="match_parent">
            <FrameLayout android:id="@+id/frameStackellipseseven"
                android:layout_gravity="center"
                android:layout_height="@dimen/_114pxv"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginEnd="@dimen/_1pxh" android:layout_width="@dimen/_374pxh">
                <ImageView android:id="@+id/imageEllipseSeven"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_114pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse7}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse7"/>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    app:contentInsetStart="0dp" style="@style/groupStyledeep_purple_300">
                    <LinearLayout android:id="@+id/linearRowarrowleft"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageArrowleft"
                            android:layout_height="@dimen/_15pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_width="@dimen/_9pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowleft"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtTitle"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_101pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.92"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_6pxh"
                            android:singleLine="true"
                            android:text="@{profilVM.profilModel.txtTitle}"
                            style="@style/txtPlusJakartaSansromanbold20" tools:text="@string/lbl_my_parent"/>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackellipsesevenOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_114pxv"
                android:layout_marginBottom="@dimen/_3pxv" android:layout_width="match_parent">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_187_5"
                    android:id="@+id/viewEllipseSevenOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_114pxv" android:layout_width="@dimen/_375pxh"/>
                <LinearLayout android:id="@+id/linearRowarrowleftOne"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStyledeep_purple_300">
                    <ImageView android:id="@+id/imageArrowleftOne"
                        android:layout_height="@dimen/_15pxh"
                        android:layout_marginBottom="@dimen/_26pxv"
                        android:layout_marginStart="@dimen/_29pxh"
                        android:layout_marginTop="@dimen/_22pxv"
                        android:layout_width="@dimen/_9pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTitleOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_149pxh"
                        android:layout_marginStart="@dimen/_112pxh"
                        android:layout_marginTop="@dimen/_22pxv"
                        android:layout_weight="0.89"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profilVM.profilModel.txtTitleOne}"
                        style="@style/txtPlusJakartaSansromanbold20" tools:text="@string/lbl_my_app"/>
                </LinearLayout>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAccount"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{profilVM.profilModel.txtAccount}"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_account"/>
        </FrameLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumngroup"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleindigo_900_0ccornerRadius">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowgroup"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageGroup"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEditprofile"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profilVM.profilModel.txtEditprofile}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_edit_profile"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVector"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_gray_800"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_800"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSecurity"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.76"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profilVM.profilModel.txtSecurity}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_security"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowgroupOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageGroupOne"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group_gray_800"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_group_gray_800"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNotifications"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profilVM.profilModel.txtNotifications}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_notifications"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvectorOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVectorOne"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_gray_800_26x20"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_800_26x20"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrivacy"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_41pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{profilVM.profilModel.txtPrivacy}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_privacy"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackgrouptwelve"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_107pxv"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_369pxv" android:layout_width="@dimen/_345pxh">
            <FrameLayout android:id="@+id/frameStacksubtract"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_69pxv"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_345pxh">
                <ImageView android:id="@+id/imageSubtract"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_69pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_subtract"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_subtract"/>
                <LinearLayout android:id="@+id/linearRowvectorTwo"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageVectorTwo"
                        android:layout_height="@dimen/_43pxh"
                        android:layout_width="@dimen/_45pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_white_a700"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700"/>
                    <ImageView android:id="@+id/imageVectorThree"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginStart="@dimen/_69pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="@dimen/_34pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_white_a700_31x35"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700_31x35"/>
                </LinearLayout>
            </FrameLayout>
            <ImageButton
                android:background="@drawable/rectangle_bg_deep_purple_a100_radius_38"
                android:id="@+id/btnGroupTwelve"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_75pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="@dimen/_76pxh"
                android:paddingHorizontal="@dimen/_19pxh"
                android:paddingVertical="@dimen/_19pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_vector" tools:ignore="ContentDescription"/>
        </FrameLayout>
    </LinearLayout>
</layout>
